app/resources/style/search.scss
#search-body {
  margin: 20px;

  #search-result {
    width: 180px;
    margin: 5px;
    background: white;
    border: none;
  }

  .card-block {
    background: white;
    padding: 10px;
  }

  .card-title {
    font-size: 18px;
    margin: 5px;
  }

  .card-text {
    font-size: 16px;
    color: grey;
  }

  .card-image {
    max-width: 180px;
    max-height: 250px;
    min-height: 250px;
    border-radius: 0;
  }
}

#home-search-container {
  padding: 30px;
  margin: 20px;
  background-color: rgba(240, 240, 240, 0.8);

  #search-title {
    color: maroon;
  }

  #search-input {
    border: none;
    border-radius: 0px;
  }

  #search-submit {
    border: none;
    border-radius: 0px;
  }

  .dropdown {
    padding: 0;
  }

  #search-filter {
    border: none;
    border-left: 1px solid maroon;
    width: 100%;
    border-radius: 0px;
  }

  #search-results {
    position: absolute;
    font-size: 14px;
  }
}

